<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supermarket_navigation"
    app:startDestination="@id/splash_dest">
    <fragment
        android:id="@+id/splash_dest"
        android:name="com.sdos.supermarket.splash.SplashFragment"
        android:label="@string/splash_label"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/login_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/splash_dest"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/login_dest"
        android:name="com.sdos.supermarket.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_dest_to_manager_dest"
            app:destination="@id/manager_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/login_dest"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_dest_to_technician_dest"
            app:destination="@id/technician_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/login_dest"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/manager_dest"
        android:name="com.sdos.supermarket.manager.ManagerFragment"
        android:label="@string/manager_title"
        tools:layout="@layout/fragment_manager" >
        <action
            android:id="@+id/action_manager_dest_to_login_dest"
            app:destination="@id/login_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/manager_dest"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/technician_dest"
        android:name="com.sdos.supermarket.technician.TechnicianFragment"
        android:label="@string/technician_title"
        tools:layout="@layout/fragment_technician">

        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_technician_dest_to_login_dest"
            app:destination="@id/login_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/technician_dest"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/product_dest"
        android:name="com.sdos.supermarket.product.ProductFragment"
        android:label="@string/product_title"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"
        tools:layout="@layout/fragment_product" />
</navigation>