<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_big"
    android:paddingBottom="@dimen/margin_big">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/newTaskTitle"
        style="@style/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_credentials"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/userIL"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIL"
        style="@style/LoginInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/login_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordIL"
        style="@style/LoginInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/SupermarketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>