<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        style="@style/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/farmers"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item"
        style="@style/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_item"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/farmers"
        style="@style/SubHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/product_farmers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/farmers"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>